# jupyter-retext-language-server

./: README.md  esbuild.mjs  flake.nix  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
js/: retext-spell.mjs  server.mjs
jupyter_retext_language_server/: config.py  plugins.py  specs.py
