[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-retext-language-server"
dependencies = [
"jupyter_lsp",
"traitlets"
]
version = "1.0.0"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_retext_language_server/dist/*"]


[tool.hatch.build.targets.wheel.shared-data]
"jupyter_retext_language_server/dist" = "share/jupyter-retext-language-server/bin/"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[project.entry-points.jupyter_lsp_spec_v1]
jupyter-retext-language-server = "jupyter_retext_language_server.specs:retext"

[project.entry-points.jupyter_retext_language_server_plugin_v1]
retext-spell = "jupyter_retext_language_server.plugins:retext_spell"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
